<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/active"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="@drawable/curvedbuttonshape"
        android:text="@string/active"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scheduled"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="@drawable/curvedbuttonshape"
        android:text="@string/scheduled"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/expired"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="@drawable/curvedbuttonshape"
        android:text="@string/expired"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background6"
        android:layout_width="755dp"
        android:layout_height="971dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <Button
        android:id="@+id/centralcampus2"
        android:layout_width="394dp"
        android:layout_height="158dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/buttonshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/warwicklogo6"
        android:layout_width="284dp"
        android:layout_height="149dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/warwicklogo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/amiko"
        android:text="@string/location_car_park_2"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/centralcampus2"
        app:layout_constraintTop_toTopOf="@+id/centralcampus2" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/amiko"
        android:text="@string/date_20th_jan_2021"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/centralcampus2"
        app:layout_constraintTop_toTopOf="@+id/centralcampus2" />

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko"
        android:text="@string/details"
        android:textColor="#FAF6F6"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/centralcampus2"
        app:layout_constraintEnd_toEndOf="@+id/centralcampus2"
        app:layout_constraintStart_toStartOf="@+id/centralcampus2"
        app:layout_constraintTop_toTopOf="@+id/centralcampus2"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/regplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/amiko"
        android:text="@string/registration_plate_rndmregplate"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/centralcampus2"
        app:layout_constraintTop_toTopOf="@+id/centralcampus2" />

    <TextView
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko"
        android:text="@string/dots"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/centralcampus2"
        app:layout_constraintEnd_toEndOf="@+id/centralcampus2"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="@+id/centralcampus2"
        app:layout_constraintTop_toTopOf="@+id/centralcampus2"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/tickettype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/amiko"
        android:text="@string/ticket_type_5_50_all_day"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/centralcampus2"
        app:layout_constraintTop_toTopOf="@+id/centralcampus2" />

    <TextView
        android:id="@+id/sessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sessions"
        android:fontFamily="@font/amiko"
        android:textColor="#673AB7"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/scheduled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>